// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`geoChartData should return geoData with all buckets 1`] = `
Object {
  "color": Object {
    "data": Array [
      4969,
      256,
      56,
      0,
      1856,
      1305,
      628,
      982,
      1683,
      3295,
      7286,
    ],
    "format": "#,##0.00",
    "index": 1,
    "name": "Density",
  },
  "location": Object {
    "data": Array [
      Object {
        "lat": 25.7839,
        "lng": -80.2102,
      },
      Object {
        "lat": 26.2181,
        "lng": -98.418,
      },
      Object {
        "lat": 26.2585,
        "lng": -97.695,
      },
      Object {
        "lat": 26.3024,
        "lng": -98.6425,
      },
      Object {
        "lat": 26.5281,
        "lng": -80.0811,
      },
      Object {
        "lat": 27.9942,
        "lng": -82.4451,
      },
      Object {
        "lat": 28.2405,
        "lng": -82.1796,
      },
      Object {
        "lat": 28.4772,
        "lng": -81.3369,
      },
      Object {
        "lat": 32.8312,
        "lng": -117.1225,
      },
      Object {
        "lat": 34.1139,
        "lng": -118.4068,
      },
      Object {
        "lat": 37.7562,
        "lng": -122.443,
      },
    ],
    "index": 0,
    "name": "City",
  },
  "segment": Object {
    "data": Array [
      "Florida",
      "Texas",
      "Texas",
      "Texas",
      "Florida",
      "Florida",
      "Florida",
      "Florida",
      "California",
      "California",
      "California",
    ],
    "index": 1,
    "name": "State Name",
    "uris": Array [
      "/gdc/md/xms7ga4tf3g3nzucd8380o2bev8oeknp/obj/9461/elements?id=6340105",
      "/gdc/md/xms7ga4tf3g3nzucd8380o2bev8oeknp/obj/9461/elements?id=4436534",
      "/gdc/md/xms7ga4tf3g3nzucd8380o2bev8oeknp/obj/9461/elements?id=4436534",
      "/gdc/md/xms7ga4tf3g3nzucd8380o2bev8oeknp/obj/9461/elements?id=4436534",
      "/gdc/md/xms7ga4tf3g3nzucd8380o2bev8oeknp/obj/9461/elements?id=6340105",
      "/gdc/md/xms7ga4tf3g3nzucd8380o2bev8oeknp/obj/9461/elements?id=6340105",
      "/gdc/md/xms7ga4tf3g3nzucd8380o2bev8oeknp/obj/9461/elements?id=6340105",
      "/gdc/md/xms7ga4tf3g3nzucd8380o2bev8oeknp/obj/9461/elements?id=6340105",
      "/gdc/md/xms7ga4tf3g3nzucd8380o2bev8oeknp/obj/9461/elements?id=6340116",
      "/gdc/md/xms7ga4tf3g3nzucd8380o2bev8oeknp/obj/9461/elements?id=6340116",
      "/gdc/md/xms7ga4tf3g3nzucd8380o2bev8oeknp/obj/9461/elements?id=6340116",
    ],
  },
  "size": Object {
    "data": Array [
      6381966,
      2228,
      121,
      0,
      77702,
      2804240,
      76416,
      1776841,
      3210314,
      1.28,
      3603761,
    ],
    "format": "#,##0.00",
    "index": 0,
    "name": "Population",
  },
  "tooltipText": Object {
    "data": Array [
      "Miami",
      "Abram",
      "Lasana",
      "Longoria",
      "Boynton Beach",
      "Tampa",
      "Zephyrhills",
      "Orlando",
      "San Diego",
      "Los Angeles",
      "San Francisco",
    ],
    "index": 2,
    "name": "City",
  },
}
`;

exports[`geoChartData should return geoData with location, color, size 1`] = `
Object {
  "color": Object {
    "data": Array [
      698,
      2145,
      952,
      803,
      2234,
      1960,
      4969,
      256,
      56,
      0,
    ],
    "format": "#,##0.00",
    "index": 1,
    "name": "Density",
  },
  "location": Object {
    "data": Array [
      Object {
        "lat": 18.0722,
        "lng": -66.7458,
      },
      Object {
        "lat": 18.0727,
        "lng": -66.6077,
      },
      Object {
        "lat": 18.0729,
        "lng": -65.8976,
      },
      Object {
        "lat": 21.2975,
        "lng": -157.7211,
      },
      Object {
        "lat": 21.3294,
        "lng": -157.846,
      },
      Object {
        "lat": 21.4031,
        "lng": -157.9566,
      },
      Object {
        "lat": 25.7839,
        "lng": -80.2102,
      },
      Object {
        "lat": 26.2181,
        "lng": -98.418,
      },
      Object {
        "lat": 26.2585,
        "lng": -97.695,
      },
      Object {
        "lat": 26.3024,
        "lng": -98.6425,
      },
    ],
    "index": 0,
    "name": "City",
  },
  "size": Object {
    "data": Array [
      3868,
      525,
      2254,
      47868,
      833671,
      46259,
      6381966,
      2228,
      121,
      0,
    ],
    "format": "#,##0.00",
    "index": 0,
    "name": "Population",
  },
}
`;

exports[`geoChartData should return geoData with location, tooltipText, size 1`] = `
Object {
  "location": Object {
    "data": Array [
      Object {
        "lat": 18.0722,
        "lng": -66.7458,
      },
      Object {
        "lat": 18.0727,
        "lng": -66.6077,
      },
      Object {
        "lat": 18.0729,
        "lng": -65.8976,
      },
      Object {
        "lat": 21.2975,
        "lng": -157.7211,
      },
      Object {
        "lat": 21.3294,
        "lng": -157.846,
      },
      Object {
        "lat": 21.4031,
        "lng": -157.9566,
      },
      Object {
        "lat": 25.7839,
        "lng": -80.2102,
      },
      Object {
        "lat": 26.2181,
        "lng": -98.418,
      },
      Object {
        "lat": 26.2585,
        "lng": -97.695,
      },
      Object {
        "lat": 26.3024,
        "lng": -98.6425,
      },
    ],
    "index": 0,
    "name": "City",
  },
  "size": Object {
    "data": Array [
      3868,
      525,
      2254,
      47868,
      833671,
      46259,
      6381966,
      2228,
      121,
      0,
    ],
    "format": "#,##0.00",
    "index": 0,
    "name": "Population",
  },
  "tooltipText": Object {
    "data": Array [
      "Santo Domingo",
      "La Yuca",
      "Martorell",
      "East Honolulu",
      "Honolulu",
      "Pearl City",
      "Miami",
      "Abram",
      "Lasana",
      "Longoria",
    ],
    "index": 1,
    "name": "City",
  },
}
`;
